Removi codigo comentado. Fiz ajustes na legibilidade do codigo. Adicionei prints de Debug para entender o framework.